--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,35 +1,13 @@
 .App {
   text-align: center;
+  width: 800px;
+  margin: 0 auto;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.playerList {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .dark-mode__toggle {
@@ -62,4 +40,8 @@
 
 .dark-mode .playerName {
   color: red;
+}
+
+h4 {
+  margin: 0 20px;
 }
